Fix popper block

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#form-section">Form Block</a>
                     </li>
+                    <li class="nav-item">
+                        <a type="button" class="nav-link" data-toggle="popover" data-trigger="click" title="Click on the URL" data-bs-content='<a href="small-task.html" target="_blank">Additional page</a>' data-bs-html="true" >Click popper</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -119,11 +122,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4 col-lg-3 mx-auto">
-                    <button type="button" class="btn btn-lg btn-danger" data-toggle="popover" data-trigger="click" title="Click on the URL" data-bs-content='<a href="small-task.html" target="_blank">Additional page</a>' data-bs-html="true" >Click popper</button></div>
-            </div>
+            </div>            
         </div>
     </section>
 
